--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
   <!-- Animated Background -->
   <div class="bg-decoration">
     <div class="floating-emoji" style="top: 20%; left: 15%;">🐾</div>
-    <div class="floating-emoji" style="top: 60%; left: 80%; animation-delay: 3s;">😺</div>
+    <div class="floating-emoji" style="top: 60%; left: 80%; animation-delay: 3s;">🐶</div>
   </div>
 
   <!-- Navigation -->
@@ -718,3 +718,4 @@
   </script>
 </body>
 </html>
+
